lib/include/net.h

#ifndef NET_H
#define NET_H

void init_ips(char *ipsfile);
int get_n_servers(void);
char *get_ip(int index);


#endif